[package]
name = "mineardmg"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bytes = "1.7.1"
cliclack = "0.3.3"
concurrent-queue = "2.5.0"
dashmap = "6.0.1"
futures = "0.3.30"
reqwest = { version = "0.12.6", features = ["json", "blocking"] }
rfd = "0.14.1"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
vorbis_rs = "0.5.4"
zip = "2.2.0"
